--- a/config/rfi_config.json
+++ b/config/rfi_config.json
@@ -3,115 +3,91 @@
 	"OutputDuration_s": [11],
 	"OutputBandwidth_Hz": 100e6,
 	"NFreqBins": 1024,
-	"PathToOutputFile": "./test.csv",
+	"PathToOutputFile": "./test_vbw.csv",
     "PathToGEProbsBB": "./config/ge_probs_bb_rfi.json",
 	"PathToGEAmpDistrBB": "./config/ge_amps_bb_rfi.csv",
 	"PathToGEProbsNB": "./config/ge_probs_nb_rfi.csv",
 	"PathToGEAmpDistrNB": "./config/ge_amps_nb_rfi.csv",
     "Reactors": [
         {
-            "Name":"Broadband",
-            "startbin":1,
-            "endbin":1024,
-            "ge_probs":[0.999, 0.001, 0.001, 0.999],
+            "Name":"Variable1",
+			"type":"vbw",
+            "centerbin":800,
+			"ge_probs":[0.0, 1.0, 0.0, 1.0],
+			"bw_distr": {
+                "type":"normal",
+                "params": {
+                    "mean":300,
+                    "std": 30
+                }				
+			},
             "pwr_distr": {
                 "type":"normal",
                 "params": {
                     "mean":0,
-                    "std":1.2
+                    "std":1.5
                 }
             }
         },
-        {
-            "Name":"NBx",
-            "startbin":101,
-            "endbin":104,            
-            "ge_probs":[0.999, 0.001, 0.001, 0.999],
-            "pwr_distr": {
+		{
+            "Name":"Variable2",
+			"type":"vbw",
+            "centerbin":250,
+			"ge_probs":[0.0, 1.0, 0.0, 1.0],
+			"bw_distr": {
                 "type":"normal",
                 "params": {
-                    "mean":-20,
-                    "std":1.2
-                }
-            }
-        },
-        {
-            "Name":"NBx",
-            "startbin":105,
-            "endbin":107,        
-            "ge_probs":[0.999, 0.001, 0.001, 0.999],
+                    "mean":100,
+                    "std": 0
+                }				
+			},
             "pwr_distr": {
                 "type":"normal",
                 "params": {
                     "mean":0,
-                    "std":1.2
+                    "std":1.5
                 }
             }
         },
-        {
-            "Name":"NBx",
-            "startbin":121,
-            "endbin":127,        
-            "ge_probs":[0.999, 0.001, 0.001, 0.999],
+		{
+            "Name":"Variable3",
+			"type":"vbw",
+            "centerbin":450,
+			"ge_probs":[0.0, 1.0, 0.0, 1.0],
+			"bw_distr": {
+                "type":"normal",
+                "params": {
+                    "mean":10,
+                    "std": 0
+                }				
+			},
             "pwr_distr": {
                 "type":"normal",
                 "params": {
                     "mean":0,
-                    "std":1.2
+                    "std":1.5
                 }
             }
         },
-        {
-            "Name":"NBx",
-            "startbin":614,
-            "endbin":660,        
-            "ge_probs":[0.999, 0.001, 0.001, 0.999],
+		{
+            "Name":"Variable4",
+			"type":"vbw",
+            "centerbin":25,
+			"ge_probs":[0.0, 1.0, 0.0, 1.0],
+			"bw_distr": {
+                "type":"normal",
+                "params": {
+                    "mean":10,
+                    "std": 0
+                }				
+			},
             "pwr_distr": {
                 "type":"normal",
                 "params": {
                     "mean":0,
-                    "std":1.2
+                    "std":1.5
                 }
             }
-        },
-        {
-            "Name":"NBx",
-            "startbin":680,
-            "endbin":700,        
-            "ge_probs":[0.999, 0.001, 0.001, 0.999],
-            "pwr_distr": {
-                "type":"normal",
-                "params": {
-                    "mean":0,
-                    "std":1.2
-                }
-            }
-        },
-        {
-            "Name":"NBx",
-            "startbin":801,
-            "endbin":815,        
-            "ge_probs":[0.999, 0.001, 0.001, 0.999],
-            "pwr_distr": {
-                "type":"normal",
-                "params": {
-                    "mean":0,
-                    "std":1.2
-                }
-            }
-        },
-        {
-            "Name":"NBx",
-            "startbin":835,
-            "endbin":839,        
-            "ge_probs":[0.999, 0.001, 0.001, 0.999],
-            "pwr_distr": {
-                "type":"normal",
-                "params": {
-                    "mean":0,
-                    "std":1.2
-                }
-            }
-        }             
+        }		
     ]
 }
