--- a/config/jspec_config_template.json
+++ b/config/jspec_config_template.json
@@ -4,8 +4,5 @@
 	"OutputBandwidth_Hz": 100e6,
 	"NFreqBins": 1024,
 	"PathToOutputFile": "./outputs/test.csv",
-    "PathToGEProbsBB": "./config/ge_probs_bb_rfi.json",
-	"PathToGEAmpDistrBB": "./config/ge_amps_bb_rfi.csv",
-	"PathToGEProbsNB": "./config/ge_probs_nb_rfi.csv",
-	"PathToGEAmpDistrNB": "./config/ge_amps_nb_rfi.csv"
+	"NoiseFloorPower_dB": -60
 }
