adding conver to time series.  not done yet

--- a/config/jspec_config_template.json
+++ b/config/jspec_config_template.json
@@ -3,6 +3,9 @@
 	"OutputDuration_s": 1.0,
 	"OutputBandwidth_Hz": 100e6,
 	"NFreqBins": 1024,
-	"PathToOutputFile": "./outputs/test.csv",
-	"NoiseFloorPower_dB": -60
+	"NoiseFloorPower_dB": -100,
+	"PathToOutputSpectrogram": "./outputs/test.csv",
+	
+	"NPtsIFFT": 4096,
+	"PathToOutputTimeSignal": "./outputs/timesignal.csv"
 }
