fixed bias problem in random phase, fixed upsample method poor performance

--- a/config/jspec_config_template.json
+++ b/config/jspec_config_template.json
@@ -2,7 +2,7 @@
   "spectrogram": {
     "Duration_s": 1.0,
     "NFreqBins": 1025,
-	"WindowSize_s": 0.001,
+	"WindowSize_s": 0.0001,
 	"NoiseFloorPower_dB": -200,
     "PathToOutputSpectrogram": "./outputs/spectrogram.csv"
   },
@@ -11,11 +11,13 @@
     "DurationPerChunk_s": -1,
     "StartingSampleRate_Hz": 10e6,
 	  "UpsampleRate": 1,
-    "ExpansionMethod": "repeat",
+    "Expansion" : {
+        "ExpansionMethod": "upsample",
+        "UpsampleInterpolationMethod": "makima"},
     "Phase" : {
         "Enabled": true,
         "ApplyRandomPhaseOffset": 0,
-        "PhaseNoise_rads": 0.0 },
+        "PhaseNoise_rads": 6.28 },
     "Plots" : {
         "InFnREP" : 0,
         "InFnIFFT" : 0
